--- a/SpreeProjectWithPageFactoryModel/pom.xml
+++ b/SpreeProjectWithPageFactoryModel/pom.xml
@@ -37,6 +37,13 @@
       <version>6.14.3</version>
       <scope>compile</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/ru.yandex.qatools.ashot/ashot -->
+    <dependency>
+      <groupId>ru.yandex.qatools.ashot</groupId>
+      <artifactId>ashot</artifactId>
+      <version>1.5.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
